added multilang support, live preview of built corpora

--- a/src/main/java/sk/svec/jan/acb/utility/XchangeLog.html
+++ b/src/main/java/sk/svec/jan/acb/utility/XchangeLog.html
@@ -24,12 +24,18 @@ limitations under the License.
         <h1>Change log</h1>
         <h2>Legenda</h2>
         <p>Crawler CR, Cleaner CL, Finder FI, Rozhranie RO, Site Style Tree SST</p>
-        
+
         <h3>version 1.0.1</h3>
         <ul>
             <li>28.3</li>
-            <li>SST: oprava chyby - vytvaranie duplicitnych textov</li>
+            <li>SST: oprava chyby - vytvaranie duplicitnych textov</li>            
         </ul> 
+
+        <ul>
+            <li>20.5</li>
+            <li>vytvorena podpora pre multijazycnost</li>  
+            <li>prehliadanie dat online - podstranka preview</li>             
+        </ul>         
 
         <h3>version 1.0</h3>
         <ul>
