--- a/src/main/java/sk/svec/jan/acb/utility/XtoDo.html
+++ b/src/main/java/sk/svec/jan/acb/utility/XtoDo.html
@@ -13,7 +13,8 @@ and open the template in the editor.
     <body>
         <h1>Todo list</h1>
         <p>
-            - spravit na nlp/acb/ nejaky pekny rozcestnik - dat tam abstrakt/grafy/vystup , plus demo aplikacie
+            - spravit na nlp/acb/ nejaky pekny rozcestnik - dat tam abstrakt/grafy/vystup , plus demo aplikacie, 
+            
             - vyhodnotenie : - rucne testovacie data VS moje data -text diff
                              - spravit parser na tie testovacie data
             - nazov suboru - ulozit ako hash celej stranky, nielen nadpis
