--- a/src/main/java/info/changeLog.html
+++ b/src/main/java/info/changeLog.html
@@ -25,17 +25,26 @@ limitations under the License.
         <h2>Legenda</h2>
         <p>Crawler CR, Cleaner CL, Finder FI, Rozhranie RO, Site Style Tree SST</p>
 
+        <h3>version 1.0.2</h3>
+        <ul>
+            <li>21.5</li>
+            <li>parser na tie testovacie data</li>  
+            <li>rucne testovacie data VS moje data - rozdiel v percentach</li>             
+        </ul> 
+        
+        <h3>version 1.0.2_beta</h3>
+        <ul>
+            <li>20.5</li>
+            <li>vytvorena podpora pre multijazycnost</li>  
+            <li>prehliadanie dat online - podstranka preview</li>             
+        </ul> 
+        
         <h3>version 1.0.1</h3>
         <ul>
             <li>28.3</li>
             <li>SST: oprava chyby - vytvaranie duplicitnych textov</li>            
         </ul> 
 
-        <ul>
-            <li>20.5</li>
-            <li>vytvorena podpora pre multijazycnost</li>  
-            <li>prehliadanie dat online - podstranka preview</li>             
-        </ul>         
 
         <h3>version 1.0</h3>
         <ul>
