web layout change

--- a/src/main/java/info/toDo.html
+++ b/src/main/java/info/toDo.html
@@ -23,11 +23,10 @@ limitations under the License.
     <body>
         <h1>Todo list</h1>
         <p>
-            - spravit na nlp/acb/ nejaky pekny rozcestnik - dat tam abstrakt/grafy/vystup , plus demo aplikacie,              
-            - nazov suboru - ulozit ako hash celej stranky, nielen nadpis
-            
+            - spravit na nlp/acb/ nejaky pekny rozcestnik - dat tam abstrakt/grafy/vystup , plus demo aplikacie
         </p>
         <p>
+            - nazov suboru - ulozit ako hash celej stranky, nielen nadpis
             - lepsia kontrola odstranovanie "IDNES.cz -- Novoroční projev", napr prienikom nadpisov
             - microdata na rozpoznavanie autora
             - ak nieje autor clanku na stranke napr filosofie.cz , je autorom www.filosofie.cz ? alebo nikto?
