--- a/src/main/webapp/WEB-INF/html/footer.html
+++ b/src/main/webapp/WEB-INF/html/footer.html
@@ -1,4 +1,5 @@
 <%@page contentType="text/html" pageEncoding="UTF-8"%>
+</div>
 <hr/>
 <div class="footer">
     <h2>Copyright &COPY;2015 Ján Švec | Design by Mária Svateníková </h2>
