web layout change

--- a/src/main/java/info/changeLog.html
+++ b/src/main/java/info/changeLog.html
@@ -27,18 +27,21 @@ limitations under the License.
 
         <h3>version 1.0.2</h3>
         <ul>
+            <li>22.5</li>
+            <li>spravit na nlp/acb/ nejaky pekny rozcestnik - dat tam abstrakt/grafy/vystup plus demo aplikacie</li>
+
             <li>21.5</li>
             <li>parser na tie testovacie data</li>  
             <li>rucne testovacie data VS moje data - rozdiel v percentach</li>             
         </ul> 
-        
+
         <h3>version 1.0.2_beta</h3>
         <ul>
             <li>20.5</li>
             <li>vytvorena podpora pre multijazycnost</li>  
             <li>prehliadanie dat online - podstranka preview</li>             
         </ul> 
-        
+
         <h3>version 1.0.1</h3>
         <ul>
             <li>28.3</li>
