--- a/src/main/java/info/toDo.html
+++ b/src/main/java/info/toDo.html
@@ -21,9 +21,10 @@ limitations under the License.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Todo list</h1>
+        <h1>Todo list</h1>     
         <p>
-            - spravit na nlp/acb/ nejaky pekny rozcestnik - dat tam abstrakt/grafy/vystup , plus demo aplikacie
+            dizajn: farby z grafu, alebo proste ine - krajsie, možno vymyslieť logo vľavo hore
+            web: ajax namiesto "načítavam", možno aj rátať percentá na základe: aktuálne stiahnutých stránok/ spolu sťahovaných stránok
         </p>
         <p>
             - nazov suboru - ulozit ako hash celej stranky, nielen nadpis
