--- a/src/main/webapp/WEB-INF/html/header.html
+++ b/src/main/webapp/WEB-INF/html/header.html
@@ -22,10 +22,7 @@
                 $(document).tooltip();
             });
 
-            $(function () {
-                $("input[type=Submit]").button();
-            });
-
+            
             $(function () {
                 $("#loading").dialog({
                     draggable: false,
@@ -61,7 +58,7 @@
             });
 
             $(function () {
-                $("a[class=jq]").button();
+                $(".jq").button();
             });
 
 
