--- a/src/main/java/info/toDo.html
+++ b/src/main/java/info/toDo.html
@@ -25,6 +25,7 @@ limitations under the License.
         <p>
             dizajn: farby z grafu, alebo proste ine - krajsie, možno vymyslieť logo vľavo hore
             web: ajax namiesto "načítavam", možno aj rátať percentá na základe: aktuálne stiahnutých stránok/ spolu sťahovaných stránok
+            - na konci suboru properities,ajaxovy vypis SESSION ID a tym sa odlisi pouzivatel            
         </p>
         <p>
             - nazov suboru - ulozit ako hash celej stranky, nielen nadpis
