links changed from absolute to relative

--- a/src/main/java/info/toDo.html
+++ b/src/main/java/info/toDo.html
@@ -23,11 +23,8 @@ limitations under the License.
     <body>
         <h1>Todo list</h1>     
         <p>
-            dizajn: farby z grafu, alebo proste ine - krajsie, možno vymyslieť logo vľavo hore
-            web: ajax namiesto "načítavam", možno aj rátať percentá na základe: aktuálne stiahnutých stránok/ spolu sťahovaných stránok
-            - na konci suboru properities,ajaxovy vypis SESSION ID a tym sa odlisi pouzivatel            
-        </p>
-        <p>
+            dizajn: farby z grafu, alebo proste ine - krajsie, možno vymyslieť logo vľavo hore     
+            
             - nazov suboru - ulozit ako hash celej stranky, nielen nadpis
             - lepsia kontrola odstranovanie "IDNES.cz -- Novoroční projev", napr prienikom nadpisov
             - microdata na rozpoznavanie autora
@@ -35,6 +32,7 @@ limitations under the License.
             - blogove veci by chceli cestovat na adresach pred nimi
             - inspiracia u tzv "reader mode" veci na stranke - presne to iste by mohlo robit aj toto
             - zvážiť výstup do vertikálu
+            - multi používateľ: na konci suboru properities vložiť SESSION ID    
 
             -FI: zlepsit heuristiku na vyhladavanie:
             autor: 
