--- a/src/main/webapp/WEB-INF/html/header.html
+++ b/src/main/webapp/WEB-INF/html/header.html
@@ -118,7 +118,7 @@
                     <br/><br/>
                     Aplikáciu si môžete stiahnuť na: <a href="https://github.com/koichix/author-corpora-builder">GIThube.</a>  
                     <br/>
-                    Vybudovaný autorský korpus si môžete stiahnuť: <a href="getfile?name=corpus\author_corpus.zip">author_corpus.zip</a> alebo zobraziť <a href="<c:url value="preview"/>" class="jq" >Preview</a><br/>
+                    Vybudovaný autorský korpus si môžete stiahnuť: <a href="getfile?name=corpus/author_corpus.zip">author_corpus.zip</a> alebo zobraziť <a href="<c:url value="preview"/>" class="jq" >Preview</a><br/>
                 </p>
 
             </div>
