--- a/src/main/webapp/WEB-INF/html/footer.html
+++ b/src/main/webapp/WEB-INF/html/footer.html
@@ -1,8 +1,10 @@
 <%@page contentType="text/html" pageEncoding="UTF-8"%>
 </div>
-<hr/>
 <div class="footer">
-    <h2>Copyright &COPY;2015 Ján Švec | Design by Mária Svateníková </h2>
+    <div class="footer_center">
+        <a href="<c:url value="input"/>" title="Späť na domovskú stránku">  <img src="images/design/home.png" style="width: 25px;height: 25px;"/> Späť na domovskú stránku</a>
+        <br/><span class="smaller">Copyright &COPY;2015 Ján Švec | Design by Mária Svateníková</span>
+    </div>
 </div>
 </div>
 </body>
