--- a/src/main/webapp/WEB-INF/html/footer.html
+++ b/src/main/webapp/WEB-INF/html/footer.html
@@ -2,7 +2,7 @@
 </div>
 <div class="footer">
     <div class="footer_center">
-        <a href="<c:url value="input"/>" title="Späť na domovskú stránku">  <img src="images/design/home.png" style="width: 25px;height: 25px;"/> Späť na domovskú stránku</a>
+        <a href="<c:url value="input"/>" title="<fmt:message key="homepage.back" />">  <img src="images/design/home.png" style="width: 25px;height: 25px; margin-bottom: -0.25em;"/> <fmt:message key="homepage.back" /></a>
         <br/><span class="smaller">Copyright &COPY;2015 Ján Švec | Design by Mária Svateníková</span>
     </div>
 </div>
