separate modules run

--- a/src/main/java/info/changeLog.html
+++ b/src/main/java/info/changeLog.html
@@ -25,6 +25,12 @@ limitations under the License.
         <h2>Legenda</h2>
         <p>Crawler CR, Cleaner CL, Finder FI, Rozhranie RO, Site Style Tree SST</p>
 
+        <ul>
+            <li>16.11.2015</li>
+            <li>Oprava chyby - odstránenie nadpisu vo výslednom texte</li>
+            <li>Prevod textového formátu mesiaca CZ/SK na číselný</li>
+        </ul> 
+
         <h3>version 1.0.2</h3>
         <ul>
             <li>22.5</li>
