--- a/src/main/java/info/toDo.html
+++ b/src/main/java/info/toDo.html
@@ -23,15 +23,14 @@ limitations under the License.
     <body>
         <h1>Todo list</h1>     
         <p>
-            dizajn: farby z grafu, alebo proste ine - krajsie, možno vymyslieť logo vľavo hore     
-            
+            analyza 100 clankov, ulozenie metadata a nasledne rozdelovanie
+        </p>
+        <p>             
             - nazov suboru - ulozit ako hash celej stranky, nielen nadpis
             - lepsia kontrola odstranovanie "IDNES.cz -- Novoroční projev", napr prienikom nadpisov
             - microdata na rozpoznavanie autora
-            - ak nieje autor clanku na stranke napr filosofie.cz , je autorom www.filosofie.cz ? alebo nikto?
             - blogove veci by chceli cestovat na adresach pred nimi
-            - inspiracia u tzv "reader mode" veci na stranke - presne to iste by mohlo robit aj toto
-            - zvážiť výstup do vertikálu
+            - inspiracia u tzv "reader mode" veci na stranke - presne to iste by mohlo robit aj toto            
             - multi používateľ: na konci suboru properities vložiť SESSION ID    
 
             -FI: zlepsit heuristiku na vyhladavanie:
